[package]
name = "my_app"
version = "0.1.0"
authors = ["Akifumi Sato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }